@@ -1,3 +1,7 @@
+2004-11-15  Per Bothner  <per@bothner.com>
+
+	* Declaration.java (printInfo(StringBuffer)): New method.
+
 2004-11-14  Per Bothner  <per@bothner.com>
 
 	* Interpreter.java (defProcStFld): Two new methods.
